CRUD api for static page HTML. Included swagger
